--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPnS4U2p0RJv8J2SRp2oFpQ"
+      "authorship_tag": "ABX9TyPUKsDhG3GytE2OE6Rc6VS5"
     },
     "kernelspec": {
       "name": "ir",
@@ -32,11 +32,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ankDGhCc4AZm"
+        "id": "z06A8PFRUQob"
       },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1Ql88wX6Ucjot4BZrHTqeV2V-Hc5bDqMN#scrollTo=WfzIAI-J6TEO)\n",
-        "[![](https://img.shields.io/badge/-View_source_on_GitHub-181717?logo=github&logoColor=white&style=flat)](https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_remote_sensing_first.ipynb)"
+        "\n",
+        "[![](https://img.shields.io/badge/-View_source_on_GitHub-black?style=flat&logo=github&logoColor=white)](https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_remote_sensing_first.ipynb)"
       ]
     },
     {
