Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBMglIoprWYmaSAka881ry",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOH+b9bLZW8g7no/M+/u4Uu"
     },
     "kernelspec": {
       "name": "ir",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_remote_sensing_first.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -41,12 +30,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dGQRbLvnYKBC"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AtYUFTKj5w5T"
       },
       "source": [
-        ""
+        "install.packages(\"raster\")"
       ],
       "execution_count": null,
       "outputs": []
