Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvDQeOqLMbgDoxEEf9/E9n"
+      "authorship_tag": "ABX9TyOvh7alNIoVFq4/JcGUb1xI"
     },
     "kernelspec": {
       "name": "ir",
@@ -79,7 +79,7 @@
       "source": [
         "library(raster)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -88,31 +88,45 @@
         "id": "11vNyksfdVSk"
       },
       "source": [
-        "Import files from the desktop"
+        "Download the image of the Parakanã Indigenous Reserve in the state of Pará (northern region of Brazil) using Landsat [data](https://drive.google.com/drive/folders/1H9CDjTmEorR4Fqe-mRYfcw5b0EZaHrvk?usp=sharing) from 2011."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "us_BQmJydUKX"
+        "id": "AhuDlVyUtMU3",
+        "outputId": "49f5a133-61ef-4f5c-f111-5739a6413609",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        }
       },
       "source": [
-        "from google.colab import files\n",
-        "uploaded = files.upload()"
+        "p224r63_2011 <- brick(\"/content/p224r63_2011_masked.grd\")\n",
+        "p224r63_2011"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "b2eaiwixpMg9"
-      },
-      "source": [
-        "\"https://drive.google.com/drive/folders/1BRiXxBXCrCSW5bRvlRbuiPrd0x7FjOEK?usp=sharing\""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "class      : RasterBrick \n",
+              "dimensions : 1499, 2967, 4447533, 7  (nrow, ncol, ncell, nlayers)\n",
+              "resolution : 30, 30  (x, y)\n",
+              "extent     : 579765, 668775, -522705, -477735  (xmin, xmax, ymin, ymax)\n",
+              "crs        : +proj=utm +zone=22 +datum=WGS84 +units=m +no_defs +ellps=WGS84 +towgs84=0,0,0 \n",
+              "source     : /content/p224r63_2011_masked.grd \n",
+              "names      :       B1_sre,       B2_sre,       B3_sre,       B4_sre,       B5_sre,        B6_bt,       B7_sre \n",
+              "min values : 0.000000e+00, 0.000000e+00, 0.000000e+00, 1.196277e-02, 4.116526e-03, 2.951000e+02, 0.000000e+00 \n",
+              "max values :    0.1249041,    0.2563655,    0.2591587,    0.5592193,    0.4894984,  305.2000000,    0.3692634 \n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -126,26 +140,69 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l20JpvVtlL_k"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "id": "l20JpvVtlL_k",
+        "outputId": "2a505e91-ea10-4952-8179-c9d6d10b4eb1"
       },
       "source": [
         "setwd(\"/content/drive/MyDrive/Telerilevamento/lab\")\n",
         "p224r63_2011 <- brick(\"p224r63_2011_masked.grd\")\n",
         "p224r63_2011"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in setwd(\"/content/drive/MyDrive/Telerilevamento/lab\"): cannot change working directory\nTraceback:\n",
+            "1. setwd(\"/content/drive/MyDrive/Telerilevamento/lab\")"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tsn3w1Y8cYfZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 418
+        },
+        "id": "tsn3w1Y8cYfZ",
+        "outputId": "a83dc8e9-e708-41d3-baa7-8f892bf652b8"
       },
       "source": [
         "plot(p224r63_2011)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in result[, i] <- readBin(raster@file@con, what = dtype, n = ncols, : replacement has length zero\nTraceback:\n",
+            "1. plot(p224r63_2011)",
+            "2. plot(p224r63_2011)",
+            "3. .local(x, y, ...)",
+            "4. .plotraster2(obj, col = col, maxpixels = maxpixels, xaxt = xa, \n .     yaxt = ya, main = main[y[i]], ext = ext, interpolate = interpolate, \n .     colNA = colNA, addfun = addfun, alpha = alpha, ...)",
+            "5. sampleRegular(object, size = maxpixels, ext = ext, asRaster = TRUE)",
+            "6. sampleRegular(object, size = maxpixels, ext = ext, asRaster = TRUE)",
+            "7. .local(x, size, ...)",
+            "8. .cellValues(x, cell)",
+            "9. .readCells(x, cells, 1)",
+            "10. getValues(x)",
+            "11. getValues(x)",
+            "12. .local(x, ...)",
+            "13. .readRasterLayerValues(x, 1, x@nrows)",
+            "14. getBilData(object, r = startrow, nrows = nrows, c = startcol, \n  .     ncols = ncols, dtype = dtype, dsize = dsize, dsign = dsign, \n  .     band = band)"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
