Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOum+vM7s9pb0pcUkQYb9zn"
+      "authorship_tag": "ABX9TyNIeydF7UerIywnyH62BAYk"
     },
     "kernelspec": {
       "name": "ir",
@@ -45,8 +45,8 @@
         "id": "aUjXwyfVb_jM"
       },
       "source": [
-        "## Introduction\n",
-        "Use the [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function to download and install packages from CRAN-like repositories or local files.\n",
+        "## Install R packages\n",
+        "The [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function is used to download and install packages from CRAN-like repositories.\n",
         "\n"
       ]
     },
@@ -68,7 +68,7 @@
       },
       "source": [
         "\n",
-        "Use the [library](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library) function to load previously installed packages."
+        "The [library](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library) function is used to load previously installed packages."
       ]
     },
     {
@@ -88,10 +88,11 @@
         "id": "ElBwRpFElLqv"
       },
       "source": [
-        "### Upload file manually\n",
-        "* Download the image of the Parakanã Indigenous Reserve in the state of Pará (northern region of Brazil) using Landsat [data](https://drive.google.com/drive/folders/1buaEhfQgOdV6AxXvV6NKQi6PAQjknyNi?usp=sharing) from 2011.\n",
+        "## Upload file manually\n",
+        "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data](https://drive.google.com/drive/folders/1buaEhfQgOdV6AxXvV6NKQi6PAQjknyNi?usp=sharing) from 2011.\n",
         "\n",
-        "* On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your Downloads folder and click OK ⇒ your files are now on Google Colab!"
+        "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your Downloads folder and click OK ⇒ your files are now on Google Colab!\n",
+        "\n"
       ]
     },
     {
@@ -100,7 +101,7 @@
         "id": "FUiacmQdNfhq"
       },
       "source": [
-        "Use the [setwd](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/getwd) function to set the current working directory of the R process."
+        "Set the current working directory of the R process with the [setwd](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/getwd) function."
       ]
     },
     {
@@ -117,10 +118,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VCODvuFZPJ0d"
+        "id": "Cz0OtbKUou7x"
       },
       "source": [
-        "Use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function to create a RasterBrick object (a multi-layer raster object)."
+        "## Reading spatial data\n",
+        "It is common to use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function to read and view a multilevel object."
       ]
     },
     {
@@ -146,12 +148,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KT8zq-TQRwTy",
-        "outputId": "feeb17a6-a7d2-4734-c8b3-f3a30d8fbb8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "KT8zq-TQRwTy",
+        "outputId": "feeb17a6-a7d2-4734-c8b3-f3a30d8fbb8d"
       },
       "source": [
         "p224r63_2011"
@@ -185,7 +187,8 @@
         "id": "PON7qgfLRyY_"
       },
       "source": [
-        ""
+        "## Create Maps \n",
+        "Several generic functions have been implemented for \"raster\" objects to create maps and other plot types."
       ]
     },
     {
