Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMt0nJet5Z4Nlp8FIHVb966"
+      "authorship_tag": "ABX9TyOQ93vtjyby97zn4VOUML9p"
     },
     "kernelspec": {
       "name": "ir",
@@ -91,7 +91,7 @@
         "## Upload file manually\n",
         "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data](https://drive.google.com/drive/folders/1buaEhfQgOdV6AxXvV6NKQi6PAQjknyNi?usp=sharing) from 2011.\n",
         "\n",
-        "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your Downloads folder and click OK ⇒ your files are now on Google Colab!\n",
+        "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your \"Downloads\" folder and click OK ⇒ your files are now on Google Colab!\n",
         "\n"
       ]
     },
@@ -162,14 +162,14 @@
         "id": "z0d4dIXNzi16"
       },
       "source": [
-        "### Lansat bands\n",
-        "##### B1 = *Blue* \n",
-        "##### B2 = *Green*\n",
-        "##### B3 = *Red*\n",
-        "##### B4 = *Near Infrared*\n",
-        "##### B5 = *Short Wave Infrared*\n",
-        "##### B6 = *Thermal Infrared*\n",
-        "##### B7 = *Short Wave Infrared*"
+        "### Lansat bands:\n",
+        "B1 = *Blue*; \n",
+        "B2 = *Green*;\n",
+        "B3 = *Red*;\n",
+        "B4 = *Near Infrared*;\n",
+        "B5 = *Short Wave Infrared*;\n",
+        "B6 = *Thermal Infrared*;\n",
+        "B7 = *Short Wave Infrared*."
       ]
     },
     {
@@ -361,10 +361,11 @@
       },
       "source": [
         "pdf(\"/content/RGB_MAP.pdf\")\n",
+        "par(mfrow=c(2,1))\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
       ],
-      "execution_count": 59,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -374,12 +375,13 @@
       },
       "source": [
         "# par natural colours, false colours, and false colours with histogram stretching\n",
+        "pdf(\"/content/RGB_MAP2.pdf\")\n",
         "par(mfrow=c(3,1))\n",
         "plotRGB(p224r63_2011, r=3, g=2, b=1, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     }
   ]
