--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ93vtjyby97zn4VOUML9p"
+      "authorship_tag": "ABX9TyODyBl4Mu82rl2TX4VK4bke"
     },
     "kernelspec": {
       "name": "ir",
@@ -23,7 +23,7 @@
       },
       "source": [
         "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
-        "<a target=\"_blank\"  href=\"https://colab.research.google.com/drive/1Ql88wX6Ucjot4BZrHTqeV2V-Hc5bDqMN#scrollTo=WfzIAI-J6TEO\">\n",
+        "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_remote_sensing_first.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
         "</td><td>\n",
         "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_remote_sensing_first.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
@@ -79,7 +79,7 @@
       "source": [
         "library(raster)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     }
   ]
