Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODyBl4Mu82rl2TX4VK4bke"
+      "authorship_tag": "ABX9TyP0JfGw0fBYrYkX+gHx9ZXS"
     },
     "kernelspec": {
       "name": "ir",
@@ -351,7 +351,8 @@
       },
       "source": [
         "### Export images\n",
-        "The [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function starts the graphics device driver for producing PDF graphics."
+        "The [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function starts the graphics device driver for producing PDF graphics. \n",
+        "The pdf file will be named in the path (function argument) and saved on Google Colab. Click the folder icon to view all files temporarily uploaded to the machine (click the pdf name in the list to download and view the image)."
       ]
     },
     {
