Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,28 +5,26 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMYG4qYRL4vOeNHTzSYPJAY"
+      "authorship_tag": "ABX9TyO1Ge6f/yFuD73+2/I0GSNn",
+      "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "ir",
+      "display_name": "R"
     },
     "language_info": {
-      "name": "python"
+      "name": "R"
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WfzIAI-J6TEO"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
-        "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_time_series.ipynb\">\n",
-        "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
-        "</td><td>\n",
-        "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_time_series.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
+        "<a href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_time_series.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +39,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3vTPepeCm7Y4"
+        "id": "7zXLOoxxovCQ"
       },
       "source": [
         ""
