Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM10P/2JZ6SmjH6baFPZj6L"
+      "authorship_tag": "ABX9TyM0ED3gd+ihs6AYShJlDxZ4"
     },
     "kernelspec": {
       "name": "ir",
@@ -37,6 +37,15 @@
       "source": [
         "# Raster data manipulation\n",
         "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-5) package provides classes and functions to manipulate geographic (spatial) data in \"raster\" format. Raster data divides space into cells (rectangles; pixels) of equal size (in units of the coordinate reference system). Such continuous spatial data are also referred to as \"grid\" data, and be contrasted with discrete (object based) spatial data (points, lines, polygons)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ykrLIeWqq7wt"
+      },
+      "source": [
+        "# Time series analysis"
       ]
     },
     {
@@ -74,13 +83,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n01xyU-4cXKt"
+        "id": "n01xyU-4cXKt",
+        "outputId": "996dbd67-793f-4003-c660-68c65e02ec9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "library(raster)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading required package: sp\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -99,7 +121,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,9 +131,9 @@
       },
       "source": [
         "## Upload file manually\n",
-        "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data](https://drive.google.com/drive/folders/1buaEhfQgOdV6AxXvV6NKQi6PAQjknyNi?usp=sharing) from 2011.\n",
+        "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data]() from 2011.\n",
         "\n",
-        "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your \"Downloads\" folder and click OK ⇒ your files are now on Google Colab!\n",
+        "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your \"Downloads\" folder and click OK. Otherwise, drag your files to Google Colab storage. Now your files are on Google Colab!\n",
         "\n"
       ]
     },
@@ -142,7 +164,7 @@
       "source": [
         "p224r63_2011 <- brick(\"p224r63_2011_masked.grd\")"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
