Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPnXyr4JipQa7yOlznuk57I"
+      "authorship_tag": "ABX9TyMLOoCtuPOJzdY1AbyZpf23"
     },
     "kernelspec": {
       "name": "ir",
@@ -36,7 +36,7 @@
       },
       "source": [
         "# Raster data manipulation\n",
-        "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-5) package provides classes and functions to manipulate geographic (spatial) data in \"raster\" format. Raster data divides space into cells (rectangles; pixels) of equal size (in units of the coordinate reference system). Such continuous spatial data are also referred to as \"grid\" data, and be contrasted with discrete (object based) spatial data (points, lines, polygons)."
+        "[Raster data](https://rspatial.org/raster/spatial/4-rasterdata.html#) divides space into cells (rectangles; pixels) of equal size (in units of the coordinate reference system). Such continuous spatial data are also referred to as \"grid\" data, and be contrasted with discrete (object based) spatial data (points, lines, polygons)."
       ]
     },
     {
@@ -46,6 +46,7 @@
       },
       "source": [
         "## Install R packages\n",
+        "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-5) package provides classes and functions to manipulate geographic data in \"raster\" format. \n",
         "The [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function is used to download and install packages from CRAN-like repositories.\n",
         "\n"
       ]
@@ -74,26 +75,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n01xyU-4cXKt",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "996dbd67-793f-4003-c660-68c65e02ec9c"
+        "id": "n01xyU-4cXKt"
       },
       "source": [
         "library(raster)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Loading required package: sp\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
