Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLOoCtuPOJzdY1AbyZpf23"
+      "authorship_tag": "ABX9TyNZxbO3yfgk5g8ReN2R9rDy"
     },
     "kernelspec": {
       "name": "ir",
@@ -109,7 +109,7 @@
         "id": "ElBwRpFElLqv"
       },
       "source": [
-        "## Upload file manually\n",
+        "## Upload file\n",
         "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data]() from 2011.\n",
         "\n",
         "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your \"Downloads\" folder and click OK. Otherwise, drag your files to Google Colab storage. Now your files are on Google Colab!\n",
